Readme + App.json

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "todo_app",
-    "description": "This project is really great.",
+    "name": "To Do",
+    "description": "To Do App made with React Native",
     "slug": "todo_app",
     "privacy": "public",
     "sdkVersion": "30.0.0",
