--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.jpg",
+      "image": "./assets/splash",
       "resizeMode": "cover",
       "backgroundColor": "#F23657"
     },
