--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "To Do",
     "description": "To Do App made with React Native",
-    "slug": "todo_app",
+    "slug": "todoApp",
     "privacy": "public",
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
