--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash",
+      "image": "./assets/splash.png",
       "resizeMode": "cover",
       "backgroundColor": "#F23657"
     },
@@ -22,6 +22,9 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "co.yhsol.todo"
     }
   }
 }
